--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --blue-primary: #274480;
   --blue-secondary: #33A9F4;
 
-  --text: #242424;
+  --text: #757575;
   --title: var(--blue-primary);
 }
 
@@ -23,4 +23,17 @@
 body {
   color: var(--text);
   background: var(--background);
+}
+
+input,
+textarea {
+  outline: none;
+}
+
+button {
+  transition: all .3s ease-in-out;
+}
+
+button:hover {
+  opacity: .7;
 }
